--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>LunchBoxWebsocket</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>1.14</maven.compiler.source>
@@ -18,22 +19,8 @@
     <dependency>
         <groupId>javax.websocket</groupId>
         <artifactId>javax.websocket-api</artifactId>
-        <version>1.1</version>
+        <version>1.0</version>
     </dependency>
-
-    <dependency>
-        <groupId>org.glassfish.tyrus</groupId>
-        <artifactId>tyrus-container-servlet</artifactId>
-        <version>1.12</version>
-    </dependency>
-
-    <dependency>
-        <groupId>org.glassfish.tyrus</groupId>
-        <artifactId>tyrus-client</artifactId>
-        <version>1.12</version>
-    </dependency>
-
-
     <dependency>
         <groupId>org.glassfish.tyrus</groupId>
         <artifactId>tyrus-server</artifactId>
@@ -51,8 +38,51 @@
         <version>1.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+    <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk</artifactId>
+        <version>1.11.848</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.21</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.11.2</version>
+    </dependency>
+
+
+
 </dependencies>
 
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <!-- DO NOT include log4j.properties file in your Jar -->
+                <excludes>
+                    <exclude>**/log4j.properties</exclude>
+                </excludes>
+                <archive>
+                    <manifest>
+                        <!-- Jar file entry point -->
+                        <mainClass>LunchBoxWebsocket.</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
 
 
 </project>
