--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
         <version>1.1</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.glassfish.tyrus</groupId>
+        <artifactId>tyrus-container-grizzly-server</artifactId>
+        <version>1.13</version>
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
@@ -67,6 +73,8 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.11.2</version>
     </dependency>
+
+
 
 
 </dependencies>
